--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,14 +1,14 @@
-
 .app {
-  display: flex;
-  height: 100%;
-  margin: 0;
-  justify-content: center;
-  align-items: center;
+    margin: 0 auto;
+    display: grid;
+    width: 1200px;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-template-areas:
+  "header header"
+  "nav main"
 }
-.app_wrapper {
-  display: grid;
-  grid-template-areas: 'header' 'main' 'footer';
-  text-align: center;
-  width: 1366px;
+.main {
+    grid-area: main;
+    background-color: gold;
 }
